# matador

./: README.md  pyproject.toml
src/matador/: __init__.py  config.py  entrypoints.py
src/matador/api/: __init__.py
src/matador/api/v1/: __init__.py
src/matador/api/v1/routers/: dataset.py
src/matador/models/: attribute.py  attribute_encoding.py  base.py  dataset.py  mapping.py
src/matador/persist/: database.py
src/matador/schemas/: attribute.py  attribute_encoding.py  base.py  dataset.py  mapping.py
tests/: test_schemas.py
