[tool.poetry]
name = "matador"
version = "0.1.0"
description = "Matador, a data engineering/integration metadata store. Holds information about sources, transforms/mappings and downstreams."
authors = ["PattyC <patrickcoffey91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
