[project]
name = "matador"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "PattyC", email = "patrickcoffey91@gmail.com" }
]
dependencies = [
    "fastapi>=0.104.1",
    "sqlalchemy>=2.0.23",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
