[project]
name = "matador"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "PattyC", email = "patrickcoffey91@gmail.com" }
]
dependencies = [
    "fastapi>=0.104.1",
    "sqlalchemy>=2.0.23",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 88

[tool.ruff]
select = [
    "E",  # pycodestyle errors (flake8)
    "F",  # pyflakes (flake8)
    "I",  # isort
]
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = [
    "F841",  # dont automatically remove unused vars, will still error on them
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.isort]
force-single-line = true

[tool.isort]
force_single_line = true
